feat(auth-service): API versioning
